--- a/.env
+++ b/.env
@@ -15,6 +15,8 @@ DB_DATABASE=autput
 DB_USERNAME=sail
 DB_PASSWORD=password
 
+ADMIN_PANEL_PASSWORD=qwerty
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
